--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
-  "name": "google-maps-search-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "google-maps-react": "^2.0.2",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-geocode": "^0.1.2",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "react-test-renderer": "^16.8.2"
-  }
+    "name": "google-maps-search-app",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "https://avaleriani.github.io/google-maps-search-app/",
+    "dependencies": {
+        "google-maps-react": "^2.0.2",
+        "react": "^16.8.1",
+        "react-dom": "^16.8.1",
+        "react-geocode": "^0.1.2",
+        "react-router-dom": "^4.3.1",
+        "react-scripts": "^2.1.5"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ],
+    "devDependencies": {
+        "react-test-renderer": "^16.8.2",
+        "gh-pages": "^2.0.1"
+    }
 }
